--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -33,6 +33,10 @@ nav a:hover {
 	background-color: yellow;
 	border-radius: 10px;
 }
+img { 
+	height: 200px;
+	width: 150px;
+}
 footer {
 	text-align: center;
 	background-color: #808080;
